{{$NEXT}}

0.58     2016-05-29

- Set the minimum_perl for the Test::Tidyall plugin to 5.10 since Test::Vars
  requires that version.


0.57     2016-05-28

- Move stale module check to build phase.


0.56     2016-05-21

- Add the Test::Vars tidyall plugin to my default tidyall.ini.


0.55     2016-05-18

- Fix handling of regexes in "exclude" config values.


0.54     2016-05-18

- Fix check for XS to check outside of the top-level dir.


0.53     2016-05-08

- Add psgi to program-extensions in perlcriticrc.


0.52     2016-05-06

- Set program-extensions in perlcriticrc.


0.51     2016-05-06

- Make sure we set argv for all PerlCritic & PerlTidy sections when munging
  tidyall.ini.


0.50     2016-04-25

- Always make the Test::TidyAll plugin verbose. There's no downside to seeing
  diffs on tidy failures.


0.49     2016-04-24

- When adding Perl::Critic and Perl::Tidy to development prereqs, ask for the
  latest versions.


0.48     2016-04-24

- Only include the DONATIONS pod section for distros where I am the copyright
  holder.


0.47     2016-04-11

- Revert changes in 0.46 that required a recent Perl. This makes testing on
  Travis painful and makes it harder for others to contribute to any module of
  mine which uses this bundle.


0.46     2016-04-11

- Switched from [ExtraTests] to [RunExtraTests].

- Made the TidyAll plugin in this bundle rewrite existing tidyall.ini files to
  make sure we don't try to check or tidy generated xt tests.


0.45     2016-03-20

- Make sure generated Pod does not have trailing whitespace.

- Fix links to mailing lists to be "mailto:" links.


0.44     2016-03-20

- Make sure that all the Pod::Weaver-related modules that this distribution
  uses are added to the prereqs list.


0.43     2016-03-20

- Added [CheckChangesHasContent].

- Added [Test::CLeanNamespaces].

- If the distro has XS code [PPPort] is added and the generated ppport.h is
  copied from the build into the repo.
